--- a/About_me.html
+++ b/About_me.html
@@ -113,7 +113,7 @@
             <div class="row mb-5">
                 <div class="col-md-8 mx-auto">
                     <div class="story-card">
-                        <h3 class="h4 mb-4">Why I want to lead the schhol</h3>
+                        <h3 class="h4 mb-4">Why I want to lead the school</h3>
                         <p>Iv'e always wanted to be some sort of leader so i decided this would be a perfect way to lead approximately 1600 pupils and iv'e faced my fare share with constant racism so i thought iv'e had enough so watch out!</p>                
                         <div class="quote-box">
                             "A man with a plan dosen't need to cram"
@@ -127,15 +127,15 @@
 <!-- What I've Done -->
             <div class="row mb-5">
                 <div class="col-md-8 mx-auto">
-                    <h3 class="h4 text-center mb-4">My way to victory</h3>
+                    <h3 class="h4 text-center mb-4">My ways to victory</h3>
                     
                     <div class="memory-card">
                         <h4 class="h5">👍 Gaining as most votes as possibe</h4>
-                        <p>If yu want the school to change my best bet is voting me so by doing that, i can assure you i twil happen.</p>
+                        <p>If you want the school to change, my best bet is voting me so by doing that, i can assure you it will happen.</p>
                     </div>
 <div class="memory-card">
                         <h4 class="h5">📲 Keeping you updated</h4>
-                        <p>I know that the public needs to know whats going on so by voting me, i can assure you that i will always keep you updated on the events so of you need to get a cheak up then come to me at school at the corrodponding times: 8:05-9:00   1:00-1:30.</p>
+                        <p>I know that the public needs to know whats going on so by voting me, i can assure you that i will always keep you updated on the events. So if you need to get a cheak up on the news then come to me at school at these corrosdponding times: 8:05-9:00   1:00-1:30.</p>
                     </div>
 
                     <div class="memory-card">
@@ -156,7 +156,7 @@
                             <p class="mb-0">✔Sixth form has their own ranking system</p>
                         </div>
                         <div class="highlight-box">
-                            <p class="mb-0">💡 The leader of the tudent council (prime minister) has a big influence</p>
+                            <p class="mb-0">💡 The leader of the student council (prime minister) has a big influence</p>
                         </div>
                         <div class="highlight-box">
                             <p class="mb-0">😂 Voting for me may be the best option</p>
