--- a/vote brady.html
+++ b/vote brady.html
@@ -94,7 +94,7 @@
                     <div class="card fact-card h-100 shadow-sm">
                         <div class="card-body text-center">
                             <h3 class="card-title h5">Learn More</h3>
-                            <p class="card-text">Im going to launch an online survey to see what students hink about the topic</p>
+                            <p class="card-text">Im going to launch an online survey to see what students think about the topic</p>
                         </div>
                     </div>
                 </div>
@@ -102,7 +102,7 @@
                     <div class="card fact-card h-100 shadow-sm">
                         <div class="card-body text-center">
                             <h3 class="card-title h5">Share Knowledge</h3>
-                            <p class="card-text">500 pupul partiion to end bromcom for backup resourse</p>
+                            <p class="card-text">500 pupul partion to end bromcom for backup resourse</p>
                         </div>
                     </div>
                 </div>
